# logic_processes_layer

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements_dev.txt  ruff.toml  setup.py
.github/workflows/: python-package.yml
logic_layer/: context.py  decorators.py  processors.py  results.py
logic_layer/abc/: abc_pipeline.py
logic_processes_layer/: __init__.py  context.py  decorators.py  meta.py  processors.py  results.py  structures.py  sub_processors.py
logic_processes_layer/abc/: abc_chain.py  abc_mapper.py  abc_pipeline.py
logic_processes_layer/extensions/: __init__.py  mappers.py  process_as_subprocess.py
logic_processes_layer/extensions/conditions/: __init__.py  condition.py  operator_enums.py  skiped.py
logic_processes_layer/processors/: base.py  decorators.py  meta.py
logic_processes_layer/protocols/: __init__.py  condition.py
logic_processes_layer/sub_processors/: base.py  decorators.py  meta.py
logic_processors/: context.py  decorators.py  meta.py  processors.py  results.py
tests/: test_conditions.py  test_process_composition.py  test_process_with_conditions.py  test_process_with_nested_attrs.py  test_processor_with_subprocessors.py  test_simple_processor.py  test_sub_processor.py  test_symple_processor.py
tests/examples/processors/: multy_process.py  mylty_process.py  process_with_conditions.py  process_with_nested_attrs.py  simple.py  symple.py
tests/examples/protocols/: __init__.py  supports_get_attribute.py
tests/examples/sub_processors/: __init__.py  simple.py  symple.py
