[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logic_processes_layer"
version = "1.2025.01.06"
requires-python = ">=3.8"
description = "Abstractions for create business logic"
readme = "README.md"
authors = [{ name = "Sergei (Gefest) Romanchuk", email = "pod.cargoes.0u@icloud.com" }]

license = { file = "LICENSE" }
urls = { homepage = "https://github.com/GefMar/logic_layer" }
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flake8]
max-line-length = 120
inline_quotes = "double"
format = "wemake"
select = ["WPS"]

ignore = [
    "C", "D", "F", "DAR", "RST", "Q", "I", "S",
    "WPS110", "WPS123",
    "WPS201", "WPS237",
    "WPS300", "WPS305", "WPS306", "WPS332",
    "WPS410", "WPS412", "WPS430",
    "WPS602", "WPS605"]

per-file-ignores = [
    "__init__.py:WPS347, WPS440",
    "*_enums.py:WPS115",
    "tests/test_*.py:WPS202, WPS442",]
